--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~8.1.2",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^2.1.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.6.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
